plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '3.3.3'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.official'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '21'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.3.3'
	implementation 'org.springframework.boot:spring-boot-starter-validation:3.3.3'
	implementation 'org.springframework.boot:spring-boot-starter-web:3.3.3'
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
	implementation 'org.springframework.boot:spring-boot-starter-security:3.3.3'
	implementation 'org.modelmapper:modelmapper:3.2.1'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.2.RELEASE'
	compileOnly 'org.projectlombok:lombok:1.18.34'
	developmentOnly 'org.springframework.boot:spring-boot-devtools:3.3.3'
	runtimeOnly 'org.postgresql:postgresql:42.7.4'
	annotationProcessor 'org.projectlombok:lombok:1.18.34'
	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat:3.3.3'
	testImplementation 'org.springframework.boot:spring-boot-starter-test:3.3.3'
	testImplementation 'org.springframework.security:spring-security-test:6.3.3'
	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.11.1'
	testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.14.0'
	testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '5.14.1'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.11.0'
}

tasks.named('test') {
	useJUnitPlatform()
}